--- a/estilo/style.css
+++ b/estilo/style.css
@@ -43,6 +43,7 @@ header > h1{
     margin-top: 0px;
     text-align: center;
     font-weight: normal;
+    text-shadow: 0px 0px 0px black;
 
 }
 
@@ -53,6 +54,7 @@ header > p{
     text-align: center;
     max-width: 490px;
     margin: auto;
+    text-shadow: 0px 0px 0px black;
    
 }
 
