--- a/estilo/style.css
+++ b/estilo/style.css
@@ -43,7 +43,7 @@ header > h1{
     margin-top: 0px;
     text-align: center;
     font-weight: normal;
-    text-shadow: 0px 0px 0px black;
+    text-shadow: 4px -1px 4px rgba(0, 0, 0, 0.418);
 
 }
 
@@ -54,7 +54,7 @@ header > p{
     text-align: center;
     max-width: 490px;
     margin: auto;
-    text-shadow: 0px 0px 0px black;
+    text-shadow: 2px -2px 5px rgba(0, 0, 0, 0.575);
    
 }
 
